@@ -104,6 +104,8 @@ Release 0.19.0 - Unreleased
    HBASE-900   Regionserver memory leak causing OOME during relatively
                modest bulk importing; part 1
    HBASE-1054  Index NPE on scanning (Clint Morgan via Andrew Purtell)
+   HBASE-1052  Stopping a HRegionServer with unflushed cache causes data loss
+               from org.apache.hadoop.hbase.DroppedSnapshotException
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
